# multigrid

./: .travis.yml  LICENSE  README.md  multigrid.cabal
bench/: Poisson.hs  jacobi.c
debug/: Poisson.hs  Poisson.prof
src/Math/Solver/: Multigrid.hs
test/: Poisson.hs
