name:                multigrid
version:             0.0.1.0
synopsis:            Multigrid solver for systems of partial differential equations.
homepage:            https://github.com/tkonolige/multigrid
license:             MIT
license-file:        LICENSE
author:              Tristan Konolige
maintainer:          tristan.konolige@gmail.com
copyright:           (c) 2014 Tristan Konolige
build-type:          Simple
stability:           Experimental
cabal-version:       >=1.10
category:            Math

library
  build-depends:       base >= 4.6 && < 4.7,
                       hmatrix >= 0.15.0.0,
                       repa >= 3.2.0.0 && < 4.0
  exposed-modules:     Math.Solver.Multigrid
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite poisson
  type:              exitcode-stdio-1.0
  main-is:           Poisson.hs
  ghc-options:       -w -O3 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    test
  default-language:  Haskell2010
  build-depends:     base,
                     multigrid,
                     repa,
                     tasty,
                     tasty-quickcheck
